--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,10 @@
 [build]
-  base = "frontend"
   command = "npm run build"
   publish = "dist"
-  functions = "../backend-netlify/netlify/functions"
+  functions = "backend-netlify/netlify/functions"
 
 [dev]
-  command = "vite"
-  functions = "../backend-netlify/netlify/functions"
-  port = 5173
-  targetPort = 8888
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/api"
-  status = 200
+  framework = "vite"
+  functions = "backend-netlify/netlify/functions"
+  command = "npm run dev"
+  port = 8888
